[package]
name = "instant"
version = "1.0.0"
edition = "2021"
build = "build.rs"
authors = ["Michał Smolarek <msmolarekg@gmail.com>"]
description = "Toy compiler made for a Compiler Construction course."

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1.6.0"

[build-dependencies]
lalrpop = "0.19.7"
